# website

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: compatibility.yml  mdbook.yml  public_html.yml
mdbook/: book.toml
mdbook/src/: SUMMARY.md  home.md
mdbook/src/common_issues/: common_issues.md  couldnt_create_hypervisor.md
mdbook/src/compilation_development/: compilation.md  compilation_development.md  development.md
mdbook/src/firmware_setup/: firmware_setup.md  using_ftp.md  using_localfiles.md
public_html/: .nojekyll  app.js  index.html  required.css  required.js  styles.css
public_html/Gamma-Boi/: app.js  index.html  index.php  styles.css  x.html
public_html/Gamma-Boi/_scripts/: search.php
public_html/Gamma-Boi/compatibility/: app.js  index.html  styles.css
public_html/_errorPages/: 403.html  404.html  500.html  errapp.js  errstyles.css
public_html/_images/: Obliteration-smoll.avif  Obliteration.avif
public_html/compatibility/: app.js  index.html  styles.css
updater/: Cargo.toml
updater/config/: config.toml
updater/src/: config.rs  extern.rs  main.rs  utils.rs
