[package]
name = "rust_db_updater"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
image = { version = "0.25", default-features = false, features = ["avif", "jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
chrono = "0.4"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
hex = "0.4"
md-5 = "0.10"
hmac = "0.12"
sha1 = "0.10"
anyhow = "1.0"
toml = "0.8"